# Fortuna-Linux

./: .gitignore  CMakeLists.txt  COPYING  Fortuna.cpp  Fortuna.h  FortunaMain.cpp  FortunaTypes.h  ISourceBytes.h  ITask.h  IntegerSource.cpp  IntegerSource.h  IntegerTask.cpp  IntegerTask.h  Pool.cpp  Pool.h  PoolManager.cpp  PoolManager.h  PoolTests.cpp  PoolTests.h  README.md  SleepUtils.cpp  SleepUtils.h  Source.cpp  Source.h  SourceFixedInteger.cpp  SourceFixedInteger.h  SourceManager.cpp  SourceManager.h  TaskFactory.cpp  TaskFactory.h  TestBase.cpp  TestBase.h  TestManager.cpp  TestManager.h  makePoolTest  makefile
